--- a/index.html
+++ b/index.html
@@ -990,7 +990,7 @@
       
     </div>
     <div class="col-12 col-lg-8">
-      <p>I am a teaching assistant at the <a href="http://fer.unizg.hr/en/course/su">Machine Learning</a> course at the University of Zagreb Faculty of Electrical Engineering and Computing. In AY <sup>2018</sup>&frasl;<sub>2019</sub> I was an assistant at the undergraduate course <a href="http://fer.unizg.hr/en/course/diglog">Digital Logic</a>.</p>
+      <p>I am a teaching assistant at the <a href="http://fer.unizg.hr/en/course/su">Machine Learning</a> course at the University of Zagreb Faculty of Electrical Engineering and Computing. Previously I was an assistant at the undergraduate course <a href="http://fer.unizg.hr/en/course/diglog">Digital Logic</a>.</p>
 
 <p>If you are a student at FER interested in working on projects on computer vision, <a href="mailto:antea.hadviger@fer.hr">let me know</a>!</p>
 
