--- a/publication_types/1/index.html
+++ b/publication_types/1/index.html
@@ -81,7 +81,7 @@
   
   
   
-  <link rel="stylesheet" href="/css/academic.min.40b7e1966543e4bf093b39660e999804.css">
+  <link rel="stylesheet" href="/css/academic.min.c36fee92ef595b9d1119174f0ddeae0c.css">
 
   
 
@@ -473,7 +473,7 @@
   
 
   <p class="powered-by">
-    &copy; 2020 Antea Hadviger &middot; 
+    © 2020 Antea Hadviger &middot; 
 
     Powered by the
     <a href="https://sourcethemes.com/academic/" target="_blank" rel="noopener">Academic theme</a> for
